# matbuilder

./: CMakeLists.txt  Constraint.cpp  Constraint.h  LICENSE.md  MatBuilder.cpp  MatrixSamplerClass.cpp  MatrixSamplerClass.h  MatrixTools.cpp  MatrixTools.h  README.md  Scrambling.cpp  Scrambling.h  cplexMatrices.cpp  cplexMatrices.h  generate_fig7c.sh  sampler.cpp
cmake/: galois.cmake
profiles/: cascaded.txt  generic_OA.txt  generic_mixed.txt  generic_net.txt  generic_netFullu6.txt  generic_projLDS.txt  optimal_control.txt  rendering.txt  rendering_u.txt  texture.txt  texture4d.txt  textureCasc.txt  textureEnglish.txt
scripts/: projections_grid.sh
